fixed footer spacing in contacts section

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -155,7 +155,8 @@ p {
   text-align: center; }
 
 .contact {
-  text-align: center; }
+  text-align: center;
+  margin-bottom: 2rem; }
 
 .work {
   display: grid;
