--- a/src/sass/_footer.scss
+++ b/src/sass/_footer.scss
@@ -50,4 +50,5 @@
 
 .contact {
     text-align: center;
+    margin-bottom: 2rem;
 }
